# ecommerce_django_api

./: README.md  TODO  pyproject.toml  requirements.txt
apps/: admin.py  documents.py  filters.py  models.py  serializers.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_alter_product_category.py
root/: settings.py  urls.py
